  name, e.g. "\[less]". In contrast, "\(12", "\(14", and "\(34" are now
  chosen from the current font, as it has been the case with historic C/A/T
  output, but not with -Tpost.
* [nt]roff: The "-mm" macros no longer print "Sun Microsystems" in calls to
  ".AU" macros and the like.
* troff: The "\S" escape sequence has been fixed; its use could lead to core
  dumps with the previous release.
* eqn: All Greek upper-case letters, i.e. "ALPHA", "BETA", etc. are now
  recognized.
* [nt]roff: The escape sequence \U'n' sets the character at Unicode position
  "U+n", where "n" is a hexadecimal number.

Release 050915
* troff: Can now directly handle .afm/.pfb/.pfa files (i.e. PostScript
  Type 1 fonts) to select fonts. The ".fp" request has been extended
  for this, and the "TROFFONTS" environment variable specifies path
  names to search for font files. See the file "FONTS" for details.
* troff: Can now handle Type 42 fonts (i.e. TrueType fonts that have been
  converted for use by PostScript interpreters).
* troff: Handles input characters according to LC_CTYPE now in combination
  with the new font setup. In a UTF-8 locale, most characters that are
  present in standard, Expert, and Symbol PostScript fonts are supported;
  otherwise, a locale-specific subset of them is available.
* troff: A PostScript device with a resolution of 72000 dpi, named "ps",
  is available, and is used by default.
* troff: Support for pairwise kerning has been added. The default tables
  are read from the AFM files. In addition, a ".kernpair" request has been
  introduced to add or replace kerning pairs; it can construct kerning
  pairs for characters from different fonts. The ".kernafter" and
  ".kernbefore" requests add a constant amount of space to specific
  characters.
* dpost: The PostScript output is now expected to conform to Adobe's
  Document Structuring Conventions, version 3.0.
* dpost: PDF Bookmarks, titles and authorship information can be included